Fixed alignment

--- a/Characters.css
+++ b/Characters.css
@@ -29,3 +29,8 @@
     text-align: center;
     padding-top: 10px;
 }
+
+.secondDataRow {
+    text-align: center;
+    padding-top: 10px;
+}
